fix copy-pasta in automation

--- a/README.md.j2
+++ b/README.md.j2
@@ -9,17 +9,27 @@
     </td>
   </tr>
   <tr>
-    <td width=15%><img src=img/icon.png style="width:150px"></td>
+    <td width=15%><img src=img/icon.png style="width:250px"></td>
     <td>
     Python application framework
     </td>
   </tr>
 </table>
 
+{{markdown_toc(__template__, level=2)}}
+
 ---------------------------------------------------------------------------------
 
 ## Overview
 
+Placeholder
+
 ## Installation
 
+Placeholder
+
 ## Usage
+
+```
+Placeholder
+```
