docs; ignoring docs in actions

--- a/README.md.j2
+++ b/README.md.j2
@@ -26,14 +26,18 @@
 
 ## Overview
 
-Application framework for python.  This is experimental; API-stability is not guaranteeed.
+Application framework for python.  
 
-### Features 
+(This is experimental; API-stability is not guaranteed.)
 
-* Plugin Framework
-* CLI parsing with [click](#placeholder)
+---------------------------------------------------------------------------------
+
+## Features 
+
+* CLI parsing with [click](https://click.palletsprojects.com/en/8.1.x/)
 * Console output with [rich](https://rich.readthedocs.io/en/stable/index.html)
-* Exit-handlers 
+* Plugin Framework
+* Exit-handlers, conventions for handling logging, etc
 
 ---------------------------------------------------------------------------------
 
@@ -63,3 +67,23 @@ class Test:
 
 assert Test.testing==42
 ```
+
+### Typing helpers
+
+```
+Placeholder
+```
+
+### Base-classes for Configuration
+
+```
+Placeholder
+```
+
+### Base-classes for Configuration
+
+```
+Placeholder
+```
+
+---------------------------------------------------------------------------------
