remove cruft; minor bugfix

--- a/README.md.j2
+++ b/README.md.j2
@@ -26,9 +26,10 @@
 
 ## Overview
 
+*(This is experimental; API-stability is not guaranteed.)*
+
 Application framework for python.  
 
-(This is experimental; API-stability is not guaranteed.)
 
 ---------------------------------------------------------------------------------
 
