--- a/README.md.j2
+++ b/README.md.j2
@@ -46,7 +46,7 @@ Application framework for python.
 
 See [pypi](https://pypi.org/project/fleks/) for available releases.
 
-```
+```bash
 pip install fleks
 ```
 
@@ -61,17 +61,15 @@ See also [the unit-tests](tests/units) for some examples of library usage.
 ```python
 
 >>> from fleks import tagging
-
-@tagging.tags(key="Value")
-class MyClass():
-  ...
-
-assert tagging.tags[MyClass]['key']=="Value"
+>> class MyClass():
+>>   pass
+>> tagging.tag(key="Value")(MyClass)
+>> assert tagging.tags[MyClass]['key']=="Value"
 ```
 
 ### Class-Properties
 
-```
+```python
 import fleks 
 
 class Test:
