more rich imports

--- a/README.md.j2
+++ b/README.md.j2
@@ -4,12 +4,10 @@
     <td colspan=2><strong>
     fleks
       </strong>&nbsp;&nbsp;&nbsp;&nbsp;
-      <small><small>
-      </small></small>
     </td>
   </tr>
   <tr>
-    <td width=15%><img src=img/icon.png style="width:250px"></td>
+    <td width=15%><img src={{github.repo_url}}/blob/master/img/icon.png?raw=true style="width:250px"></td>
     <td>
     Python application framework
     <br/><br/>
